# conduit-core

./: .conduit_state.json  .gitignore  CHANGELOG.md  LICENSE  README.md  ingest.yml  ingest_full_refresh_test.yml  ingest_postgres_test.yml  ingest_postgres_to_s3.yml  ingest_postgres_to_snowflake.yml  manifest.json  pyproject.toml  test_checkpoint_manual.yml  test_connections.yml  test_databricks.py  test_invalid_connections.yml  test_large.yml  test_mode_debug.py
.conduit/schema_audit/: test_resource_20251031_131023.json  test_resource_20251031_131423.json
data/: input_users.csv
docs/: CONNECTORS.md  QUICK_START.md  architecture.md  checkpoint.md  cli-reference.md  cli.md  cli2.md  configuration.md  connectors.md  contributing.md  data-quality.md  dry-run.md  errors.md  features.md  manifest.md  modules.md  roadmap.md  schema-evolution.md  schema-validation.md  state.md
docs/archive/: architecture.md  connectors.md  data-quality.md  installation.md  usage.md
examples/pipelines/: ingest_csv_to_postgres.yml  ingest_csv_to_snowflake.yml  ingest_s3_download.yml  ingest_s3_incremental.yml  ingest_s3_test.yml
output/: azure_users.csv  parquet_to_csv.csv  users_output.csv
src/conduit_core/: __init__.py  batch.py  checkpoint.py  cli.py  config.py  engine.py  errors.py  incremental.py  logging_utils.py  manifest.py  quality.py  schema.py  schema_evolution.py  schema_store.py  schema_validator.py  state.py  types.py  validators.py
src/conduit_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/conduit_core/cli_plugins/: template.py
src/conduit_core/connectors/: __init__.py  azuresql.py  azuresql.py.disabled  base.py  bigquery.py  csv.py  databricks.py  dummy.py  json.py  json_connector.py  mysql.py  parquet.py  parquet_connector.py  parquet_connector.py.disabled  postgresql.py  registry.py  s3.py  snowflake.py
src/conduit_core/engine_modules/: incremental_sync.py  preflight.py  quality_checks.py  (+2 more)
tests/: conftest.py  test_atomic_writes.py  test_batch_processing.py  test_checkpoint.py  test_cli_commands.py  test_config.py  test_config_evolution_v2.py  test_connection_validation.py  test_csv_connector.py  test_discovery.py  test_dlq.py  test_dry_run.py  test_error_handling.py  test_manifest.py  test_merge_writes.py  test_observability.py  test_postgresql_connector.py  test_preflight.py  test_preflight_enhancements.py  test_preflight_schema_evolution.py  test_progress_bars.py  test_quality_checks.py  test_retry.py  test_s3_connector.py  test_schema_evolution.py  test_schema_evolution_integration.py  test_schema_evolution_v2.py  test_schema_inference.py  test_schema_integration.py  test_schema_store_v2.py  test_schema_validation.py  test_state_management.py  test_type_handling.py
tests/connectors/: test_bigquery.py  test_json.py  test_json_connector.py  test_parquet.py
tests/fixtures/: generate_delimiter_test_files.py  generate_edge_case_files.py  generate_test_files.py
tests/integration/: test_auto_detection.py  test_checkpoint_integration.py  test_local_transfers.py  test_parquet_with_manifest.py  test_resume.py  test_schema_evolution_bigquery.py  test_schema_evolution_snowflake.py  test_snowflake_schema_evolution_autoadapt.py  test_snowflake_schema_evolution_autoadapt_removed.py  test_type_conversion.py
tests/stress/: BENCHMARK_REPORT.md  test_chaos_recovery.py  test_s3_throughput.py  test_throughput_minimal.py  test_throughput_scaling.py
tests/templates/: test_template_system.py
(+38 files in other folders)
