[project]
name = "conduit-core"
version = "0.1.0"
description = ""
authors = [
    {name = "alex",email = "alex12060309@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all] (>=0.19.2,<0.20.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "databricks-sdk (>=0.67.0,<0.68.0)"
]

[tool.poetry]
packages = [{include = "conduit_core", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
