[project]
name = "conduit-core"
version = "0.1.0"
description = "The VLC of data ingestion"
authors = [
    {name = "alex", email = "alex12060309@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.19.2",
    "pyyaml>=6.0.3",
    "pydantic>=2.11.9",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "boto3>=1.35.0",
    "psycopg2-binary>=2.9.0",
    "snowflake-connector-python>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "moto[s3]>=5.0.0"
]

[project.scripts]
conduit = "conduit_core.cli:app"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "moto[s3]>=5.0.0"
]
